// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Webhook List should render correctly with subaccounts 1`] = `
Array [
  Object {
    "label": "Name",
    "sortKey": "name",
  },
  "Target",
  Object {
    "label": "Last Success",
    "sortKey": "last_successful",
    "width": "18%",
  },
  Object {
    "label": "Last Failure",
    "sortKey": "last_failure",
    "width": "18%",
  },
  Object {
    "label": "Events For",
    "sortKey": "subaccount_id",
    "width": "18%",
  },
]
`;

exports[`Page: Webhook List should render correctly with subaccounts 2`] = `
Array [
  Array [
    <Link
      replace={false}
      to="/webhooks/details/id?subaccount=0"
    >
      my webby hook
    </Link>,
    "go here",
    "Feb 8 2018, 10:20am",
    "Jan 8 2018, 10:20am",
    <SubaccountTag
      all={false}
      id={0}
      isDefault={false}
      master={true}
      receiveAll={false}
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/webhooks/details/id-2?subaccount=101"
    >
      my webby hooki 2
    </Link>,
    "go there",
    "Feb 8 2018, 10:20am",
    null,
    <SubaccountTag
      all={false}
      id={101}
      isDefault={false}
      master={false}
      receiveAll={false}
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/webhooks/details/id-3"
    >
      my webby hooki 3
    </Link>,
    "go nowhere",
    null,
    "Jan 8 2018, 10:20am",
    <SubaccountTag
      all={false}
      id={null}
      isDefault={false}
      master={false}
      receiveAll={true}
    />,
  ],
]
`;

exports[`Page: Webhook List should render error when it fails 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Push message events directly to your own endpoints
      </p>,
      "image": [Function],
      "show": false,
      "title": "Create a Webhook",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Webhook",
      "to": "/webhooks/create",
    }
  }
  title="Webhooks"
>
  <ApiErrorBanner
    errorDetails="this hook failed"
    message="Sorry, we seem to have had some trouble loading your webhooks."
    reload={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": undefined,
      }
    }
  />
</Page>
`;

exports[`Page: Webhook List should render happy path 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Push message events directly to your own endpoints
      </p>,
      "image": [Function],
      "show": false,
      "title": "Create a Webhook",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Webhook",
      "to": "/webhooks/create",
    }
  }
  title="Webhooks"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
        },
        "Target",
        Object {
          "label": "Last Success",
          "sortKey": "last_successful",
          "width": "18%",
        },
        Object {
          "label": "Last Failure",
          "sortKey": "last_failure",
          "width": "18%",
        },
      ]
    }
    defaultSortColumn="name"
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "target",
          "auth_type",
          "last_successful",
        ],
        "itemToStringKeys": Array [
          "name",
          "target",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "id": "id",
          "last_failure": "2018-01-08T15:20:25Z",
          "last_successful": "2018-02-08T15:20:25Z",
          "name": "my webby hook",
          "subaccount_id": 0,
          "target": "go here",
        },
        Object {
          "id": "id-2",
          "last_successful": "2018-02-08T15:20:25Z",
          "name": "my webby hooki 2",
          "subaccount_id": 101,
          "target": "go there",
        },
        Object {
          "id": "id-3",
          "last_failure": "2018-01-08T15:20:25Z",
          "name": "my webby hooki 3",
          "target": "go nowhere",
        },
      ]
    }
  />
</Page>
`;

exports[`Page: Webhook List should render loading component when loading data 1`] = `<Loading />`;

exports[`Page: Webhook List should render row data properly 1`] = `
Array [
  <Link
    replace={false}
    to="/webhooks/details/id?subaccount=0"
  >
    my webby hook
  </Link>,
  "go here",
  "Feb 8 2018, 10:20am",
  "Jan 8 2018, 10:20am",
]
`;
